[package]
name = "probly-search"
description = "A lightweight and thread-safe, full-text search engine with a fully customizable scoring function"
version = "1.1.2"
authors = ["marcus-pousette <marcus.pousette@quantleaf.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/quantleaf/probly-search"
repository = "https://github.com/quantleaf/probly-search"
documentation = "https://github.com/quantleaf/probly-search"
readme = "README.md"
keywords = ["search", "query", "bm25","index"]
categories = ["text-processing"]
exclude = [".github/**", ".gitignore", ".rustfmt.toml"]

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
time = "*"
criterion = {version ="0.3" , features  = ["html_reports"]}



[[bench]]
name = "test_benchmark"
harness = false