[package]
name = "probly-search"
description = "A lightweight full-text search engine with a fully customizable scoring function"
version = "1.2.4"
authors = ["marcus-pousette <marcus.pousette@quantleaf.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/quantleaf/probly-search"
repository = "https://github.com/quantleaf/probly-search"
documentation = "https://github.com/quantleaf/probly-search"
readme = "README.md"
keywords = ["search", "query", "bm25","index"]
categories = ["text-processing"]
exclude = [".github/**", ".gitignore", ".rustfmt.toml"]

[dependencies]
typed-generational-arena = "0.2"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
criterion = {version ="0.3" , features  = ["html_reports"]}

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "test_benchmark"
harness = false


[profile.dev]
opt-level = 0
debug = true


